# SwapBytes

./: Cargo.toml  readme.md  test.docx
src/: main copy.rs  main.rs  network.rs
