[package]
name = "SwapBytes"
version = "0.1.0"
edition = "2021"

[dependencies]
# runtime for async applications
tokio = { version = "1.38.1", features = ["full"] }
# make async fn in traits work with dyn traits
async-trait = "0.1.81"
# futures and streams
futures = "0.3.30"
clap = { version = "4.5.6", features = ["derive"] }
# serde for serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
# serde_cbor for encoding and decoding CBOR
serde_cbor = "0.11"
# bytes for dealing with byte buffers
bytes = "1.3"
chrono = "0.4"
sha2 = "0.10"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde_json = "1.0"

# allows easy logging style functionality with asynchronous programs
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

libp2p-kad = "0.46.0"

# libp2p for peer-to-peer networking
[dependencies.libp2p]
version = "0.53.2"
features = ["tokio", "gossipsub", "noise", "macros", "tcp", "quic", "yamux", "rendezvous", "ping", "identify", "cbor", "request-response", "kad", "mdns"]
